# rust-xpath-benchmark

./: CLAUDE.md  Cargo.toml  README.md  postprocess.sh
benchmarks/: Cargo.toml
benchmarks/benches/: deep.rs  large.rs  medium.rs  realworld.rs  small.rs  wide.rs
benchmarks/src/: lib.rs
common/src/: lib.rs
docs/: index.html
docs/01_small/: skipped.json
docs/01_small/all_books/report/: index.html
docs/01_small/amxml/report/: index.html
docs/01_small/contains_title/report/: index.html
docs/01_small/count_books/report/: index.html
docs/01_small/fiction/report/: index.html
docs/01_small/first_book/report/: index.html
docs/01_small/flwr_titles/report/: index.html
docs/01_small/libxml/report/: index.html
docs/01_small/price_gt_12/report/: index.html
docs/01_small/report/: index.html
docs/01_small/sxd-xpath/report/: index.html
docs/01_small/titles/report/: index.html
docs/01_small/xee-xpath/report/: index.html
docs/01_small/xrust/report/: index.html
docs/02_medium/: skipped.json
docs/02_medium/all_books/report/: index.html
docs/02_medium/amxml/report/: index.html
docs/02_medium/contains_title/report/: index.html
docs/02_medium/count_books/report/: index.html
docs/02_medium/fiction/report/: index.html
docs/02_medium/first_book/report/: index.html
docs/02_medium/flwr_titles/report/: index.html
docs/02_medium/last_book/report/: index.html
docs/02_medium/libxml/report/: index.html
docs/02_medium/price_gt_30/report/: index.html
docs/02_medium/report/: index.html
docs/02_medium/sxd-xpath/report/: index.html
docs/02_medium/titles/report/: index.html
docs/02_medium/xee-xpath/report/: index.html
docs/02_medium/xrust/report/: index.html
docs/03_large/: skipped.json
docs/03_large/amxml/report/: index.html
docs/03_large/book_1000/report/: index.html
docs/03_large/contains_title/report/: index.html
docs/03_large/count_books/report/: index.html
docs/03_large/fiction/report/: index.html
docs/03_large/first_book/report/: index.html
docs/03_large/flwr_count/report/: index.html
docs/03_large/last_book/report/: index.html
docs/03_large/report/: index.html
docs/04_deep/: skipped.json
docs/04_deep/report/: index.html
docs/05_wide/: skipped.json
docs/05_wide/report/: index.html
docs/06_realworld_rss/report/: index.html
docs/07_realworld_maven/report/: index.html
docs/08_realworld_osm/: skipped.json
docs/08_realworld_osm/report/: index.html
docs/report/: index.html
fixtures/: README.md  deep-nest.xml  medium.xml  osm-map.xml  rss2-sample.xml  small.xml
fixtures/generate/: Cargo.toml
fixtures/generate/src/: main.rs
runner-amxml/: Cargo.toml
runner-amxml/src/: lib.rs
runner-libxml/: Cargo.toml
runner-libxml/src/: lib.rs
runner-sxd-xpath/: Cargo.toml
runner-sxd-xpath/src/: lib.rs
runner-xee-xpath/: Cargo.toml
runner-xee-xpath/src/: lib.rs
runner-xrust/: Cargo.toml
runner-xrust/src/: lib.rs
tools/violin-marker/: Cargo.toml
tools/violin-marker/src/: main.rs
(+1325 files in other folders)
