[package]
name = "benchmarks"
version = "0.1.0"
edition.workspace = true

[dependencies]
common.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
runner-sxd-xpath.workspace = true
runner-xee-xpath.workspace = true
runner-xrust.workspace = true
runner-amxml.workspace = true
criterion.workspace = true

[[bench]]
name = "small"
harness = false

[[bench]]
name = "medium"
harness = false

[[bench]]
name = "large"
harness = false

[[bench]]
name = "deep"
harness = false

[[bench]]
name = "wide"
harness = false

[[bench]]
name = "realworld"
harness = false
