[package]
name = "benchmarks"
version = "0.1.0"
edition.workspace = true

[dependencies]
common.workspace = true
runner-sxd-xpath.workspace = true
runner-xee-xpath.workspace = true
runner-xrust.workspace = true
runner-amxml.workspace = true
runner-libxml.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wait-timeout = "0.2"

[dev-dependencies]
criterion.workspace = true

[[bin]]
name = "probe"
path = "src/bin/probe.rs"

[[bench]]
name = "01_small"
path = "benches/small.rs"
harness = false

[[bench]]
name = "02_medium"
path = "benches/medium.rs"
harness = false

[[bench]]
name = "03_large"
path = "benches/large.rs"
harness = false

[[bench]]
name = "04_deep"
path = "benches/deep.rs"
harness = false

[[bench]]
name = "05_wide"
path = "benches/wide.rs"
harness = false

[[bench]]
name = "06_realworld"
path = "benches/realworld.rs"
harness = false
